--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 {% endfor %}
 
 <!-- Pagination links -->
-<div class="pagination">
+<div class="pagination"><h1>
   {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path }}" class="previous">
       Previous
@@ -26,11 +26,11 @@ layout: default
     <span class="previous">Previous</span>
   {% endif %}
   <span class="page_number ">
-    Page: {{ paginator.page }} of {{ paginator.total_pages }}
+    &nbsp;&nbsp;&nbsp;Page {{ paginator.page }} of {{ paginator.total_pages }} &nbsp;&nbsp;&nbsp;
   </span>
   {% if paginator.next_page %}
     <a href="{{ paginator.next_page_path }}" class="next">Next</a>
   {% else %}
     <span class="next ">Next</span>
   {% endif %}
-</div>
+</h1></div>
